--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,31 @@
-#countries{
+#countries, .languages{
 	padding:0;
 }
 #countries .country{
 	list-style:none;
 	padding:0;
 	margin:10px;
+}
+.flag{
+	display:inline-block;
+	width: 80px;
+	height: 80px;
+	overflow:hidden;
+}
+.flag img{
+	width: 100%;
+	height: 100%;
+}
+.country p{
+	display:inline-block;
+	list-style:none;
+	float:left;
+	margin:0 10px 0 0;
+}
+.native{
+	padding-right:5px;
+	border-right:1px solid #000;
+}
+.native:last-child{
+	border:none;
 }
