--- a/css/style.css
+++ b/css/style.css
@@ -7,14 +7,12 @@
 	margin:10px;
 }
 .flag{
-	display:inline-block;
+	display:block;
 	width: 80px;
-	height: 80px;
-	overflow:hidden;
 }
 .flag img{
 	width: 100%;
-	height: 100%;
+	display:block;
 }
 .country p{
 	display:inline-block;
